[package]
name = "zellij-datetime"
version = "0.19.0"
authors = ["h1romas4 <h1romas4@gmail.com>"]
edition = "2021"

[dependencies]
zellij-tile = "0.38.2"
zellij-tile-utils = "0.38.2"
ansi_term = "^0.12"
chrono-wasi = "^0.4"
linked-hash-map = "^0.5"
csscolorparser = "^0.6"

[profile.release]
lto = true
